Re-generate API-access code from latest swagger.yaml
