# src/app/swagger/model/Body.ts
@@ -1,0 +1,37 @@
+/**
+ * UPResourceEditor
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: ostangenberg@universeprojects.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import * as models from './models';
+
+export interface Body {
+    /**
+     * frame duration in ms
+     */
+    duration?: number;
+
+    offsetX?: number;
+
+    offsetY?: number;
+
+    spriteWidth?: number;
+
+    spriteHeight?: number;
+
+    rows?: number;
+
+    columns?: number;
+
+    imagePath?: string;
+
+    tags?: Array<string>;
+
+}
